# pcynlitx.nova

./: .gitignore  CMakeLists.txt  Executable_File_List.cmake  Gui_Build_Settings.cmake  Mingw64_Configuration.cmake  README.md  Target_Link_Settings.cmake  build_project_gui.ps1  build_project_kernel.ps1  build_script.ps1  clean_cmake_builds.ps1  cmake_build_script.ps1  cmake_config_script.ps1  cmake_pcynlitx_build.ps1  cmake_test_script.ps1  config_script.ps1  desktop_link_setter.ps1  pcynlitx_resource.rc
BASIC.TOOLS/: CMakeLists.txt
BASIC.TOOLS/CharOperator/: CharOperator.cpp  CharOperator.h
BASIC.TOOLS/ClassNameReader/: ClassNameReader.cpp
BASIC.TOOLS/ClassSyntaxControl/: ClassSyntaxControl.cpp
BASIC.TOOLS/Cpp_FileOperations/: Cpp_FileOperations.cpp  Cpp_FileOperations.h  Cpp_FileOperations.mk
BASIC.TOOLS/Custom_System_Interface/: Child_Process.mk  Custom_System_Interface.cpp  Custom_System_Interface.h  Redirected_Process.mk  Redirector_Tester.cpp  Redirector_Tester.mk  child_process.cpp  redirected_process_creation.cpp  redirected_process_creation.ps1  redirected_process_creation_example.ps1
BASIC.TOOLS/DirectoryOperations/: DirectoryOperations.cpp  DirectoryOperations.h  DirectoryOperations.mk  DirectoryOperations_Main_File.cpp
BASIC.TOOLS/Empty_Descriptor_File_Builder/: Empty_Descriptor_File_Builder.cpp  Empty_Descriptor_File_Builder_Make_File.make
BASIC.TOOLS/IntToCharTranslater/: IntToCharTranslater.cpp
BASIC.TOOLS/StringOperator/: StringOperator.cpp  StringOperator.h
DESCRIPTION.PROCESSING.SYSTEM/Description.Readers/: CMakeLists.txt
DESCRIPTION.PROCESSING.SYSTEM/Description.Writers/: CMakeLists.txt
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/: CMakeLists.txt
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_Builder/: Executable_MakeFile_Builder.cpp  Executable_MakeFile_Builder.hpp  Executable_MakeFile_Builder.make  Executable_MakeFile_Builder.mk  Executable_MakeFile_Builder_Main_File.cpp
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_ComConstructor/: Executable_MakeFile_ComConstructor.cpp  Executable_MakeFile_ComConstructor.hpp  Executable_MakeFile_ComConstructor.make  Executable_MakeFile_ComConstructor.mk  Executable_MakeFile_ComConstructor_Main_File.cpp
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_DataCollector/: Executable_MakeFile_DataCollector.cpp  Executable_MakeFile_DataCollector.hpp  Executable_MakeFile_DataCollector.make  Executable_MakeFile_DataCollector_Main_File.cpp
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_DepDeterminer/: Executable_MakeFile_DepDeterminer.cpp  Executable_MakeFile_DepDeterminer.hpp  Executable_MakeFile_DepDeterminer.make  Executable_MakeFile_DepDeterminer_Main_File.cpp
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_Dependency_Selector/: Executable_MakeFile_Dependency_Selector.cpp  Executable_MakeFile_Dependency_Selector.hpp  Executable_MakeFile_Dependency_Selector.mk  Executable_MakeFile_Dependency_Selector_Main_File.cpp
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_Information_Collector/: Executable_MakeFile_Information_Collector.cpp
EXECUTABLE.MAKE.FILE.BUILD.SYSTEM/Executable_MakeFile_Script_Builder/: Executable_MakeFile_Script_Builder.cpp  Executable_MakeFile_Script_Builder.hpp
GIT.DATA.PROCESSING.SYSTEM/: CMakeLists.txt
GIT.DATA.PROCESSING.SYSTEM/Git_Data_Processor/: Git_Data_Processor.cpp  Git_Data_Processor.hpp  Git_Data_Processor.mk  Git_Data_Processor_Main_File.cpp
GIT.DATA.PROCESSING.SYSTEM/Git_File_List_Receiver/: Git_File_List_Receiver.cpp  Git_File_List_Receiver.hpp  Git_File_List_Receiver_Main_File.cpp
GIT.DATA.PROCESSING.SYSTEM/Git_File_List_Writer/: Git_File_List_Writer.cpp  Git_File_List_Writer.hpp  Git_File_List_Writer.mk
GIT.DATA.PROCESSING.SYSTEM/Git_Ignoring_Files_Lister/: Git_Ignoring_Files_Lister.cpp  Git_Ignoring_Files_Lister.hpp  Git_Ignoring_Files_Lister_Main_File.cpp
GIT.DATA.PROCESSING.SYSTEM/Git_Modification_Lister/: Git_Modification_Lister.cpp  Git_Modification_Lister.hpp  Git_Modification_Lister.mk
GIT.DATA.PROCESSING.SYSTEM/Git_Modification_Receiver/: Git_Modification_Receiver.cpp  Git_Modification_Receiver.hpp  Git_Modification_Receiver.mk  Git_Modification_Receiver_Main_File.cpp
GUI.DEVELOPMENT/: CMakeLists.txt  Pcb_Descriptor.txt  wxLauncher.cpp
GUI.DEVELOPMENT/Custom_Close_Button/: Custom_Close_Button.cpp  Custom_Close_Button.h
GUI.DEVELOPMENT/Custom_DataPanel/: Custom_DataPanel.cpp  Custom_DataPanel.hpp
GUI.DEVELOPMENT/Custom_DataPanel_Processor/: Custom_DataPanel_Processor.cpp  Custom_DataPanel_Processor.hpp  Custom_Multi_DataPanel.cpp
GUI.DEVELOPMENT/Custom_Message_Dialog/: Custom_Message_Dialog.cpp  Custom_Message_Dialog.hpp
GUI.DEVELOPMENT/Custom_Multi_DataPanel/: Custom_Multi_DataPanel.cpp  Custom_Multi_DataPanel.hpp
GUI.DEVELOPMENT/Custom_Notebook/: Custom_Notebook.cpp  Custom_Notebook.h
GUI.DEVELOPMENT/Custom_ProcessOutput/: Custom_ProcessOutput.cpp  Custom_ProcessOutput.hpp
GUI.DEVELOPMENT/Custom_Progress_Dialog/: Custom_Progress_Dialog.cpp  Custom_Progress_Dialog.hpp
GUI.DEVELOPMENT/Custom_TabArt/: Custom_TabArt.cpp  Custom_TabArt.h
GUI.DEVELOPMENT/Custom_TextCtrl/: Custom_TextCtrl.cpp
GUI.DEVELOPMENT/Custom_Tree_View_Panel/: Custom_Tree_View_Panel.cpp  Custom_Tree_View_Panel.h
GUI.DEVELOPMENT/Custom_Window/: Custom_Window.cpp
GUI.DEVELOPMENT/Custom_wxDataViewTreeCtrl/: Custom_wxDataViewTreeCtrl.cpp  Custom_wxDataViewTreeCtrl.hpp
GUI.DEVELOPMENT/Custom_wxPanel/: Custom_wxPanel.cpp  Custom_wxPanel.h
GUI.DEVELOPMENT/Custom_wxThread/: Custom_wxThread.cpp  Custom_wxThread.hpp
GUI.DEVELOPMENT/Custom_wxTreeCtrl/: Custom_wxTreeCtrl.cpp
GUI.DEVELOPMENT/GUI.Headers/: Custom_DockArt.h  (+2 more)
KERNEL.DEVELOPMENT/: CMakeLists.txt  Kernel.cpp  Kernel.hpp  KernelTest.cpp  Kernel_Main_File.cpp
MAKE.FILE.BUILD.SYSTEM/: CMakeLists.txt
PROJECT.BUILD.TOOLS/: CMakeLists.txt  Set_Ignoring_Files.ps1
SCRIPT.WRITERS/: CMakeLists.txt
SOURCE/: CMakeLists.txt  build_gui.ps1  clean_project_builds.ps1  desktop_link_setter.ps1  update_exe_files.ps1
SOURCE.FILE.PROCESSING.SYSTEM/: CMakeLists.txt
(+625 files in other folders)
